--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,20 @@
   box-sizing: border-box;
 }
 body {
-  background-color: orangered;
+  background-color: rgb(252, 207, 191);
+}
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
